refactor(view): Disable color picker for ludo menu